--- a/src/main/resources/templates/venta.html
+++ b/src/main/resources/templates/venta.html
@@ -1,11 +1,18 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-		<title>Shopping Cart</title>
-    	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css"/>
-    	<link rel="stylesheet" href="css/bootstrap1.min.css"/>
-    	<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-8" ></meta>
-	</head>
+	<title>Shopping Cart</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap1.min.css"/>
+    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-8" ></meta>
+	<script type="text/javascript">
+		//<![CDATA[
+		function identificarCliente() {
+			form.identificarCliente.click();
+		}
+		//]]>
+	</script>
+</head>
 <body>
 	<div class="container" >
     <form action="#" th:action="@{/}" th:object="${venta}" method="post" id="form" class="css-form" >
@@ -14,13 +21,14 @@
 					<h2>Shopping Cart</h2>
 					
 		        	<table >
+		        		
 						<tr>
 							<td class="text-center">
 							<div class="media-body ">
-								Cliente ID: <input type="text" th:field="*{cliente.id}" class="input-small" onchange="form.identificarCliente.click()" />
+								Cliente ID: <input type="number" th:field="*{cliente.id}" class="input-small" onchange="form.identificarCliente.click()" required="true" />
 								<input type="submit" name="identificarCliente" class="hidden"/>
 								<strong><span th:text="*{cliente.nombre}" /> <span th:text="*{cliente.apellido}" /></strong>
-								<span class="text-warning">Cliente es requerido.</span>
+								
 							</div>
 							</td>
 						</tr>
@@ -36,18 +44,56 @@
 		                        <th></th>
 		                    </tr>
 		                </thead>
-		               
+		                
+		                 <tbody>
+		                	 <input type="submit" name="agregarProducto" class="hidden"/>
+		                    <tr class="repeated-item" data-th-each="linea,lineaStat : ${venta.lineas}">
+		                    	<td>
+		                    		<select th:field="*{lineas[__${lineaStat.index}__].producto}" required="true" onchange="form.agregarProducto.value='${lineaStat.index}'; form.agregarProducto.click()">
+        							  <option value=""></option>
+        							  <option th:each="var : ${productos}" 
+                 						 th:value="${var.id}" 
+                  							th:text="${var.descripcion}">Prod</option>
+       								 </select>
+		                    	</td>
+		                        <td class="col-sm-8 col-md-6">
+			                        <div class="media">
+			                            <a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png" style="width: 52px; height:52px;" /> </a>
+			                            <div class="media-body ">
+			                                <h4 class="media-heading"><a href="#">
+			                                <span th:text="${linea.descripcion}" />
+			                                </a></h4>
+			                                <h5 class="media-heading"> Provisto por <a href="#">Proveedor</a></h5>
+			                                <span>Status: </span><span class="text-success"><strong>En Stock</strong></span>
+			                            </div>
+			                        </div>
+		                        </td>
+		                        <td class="col-sm-1 col-md-1" style="text-align: center">
+		                        <div >
+		                        	<input type="number" th:text="${linea.cantidad}"  class="input-mini"  required="true"  min="0" max="10" integer="true" />
+		                        </div>
+		                        </td>
+		                        <td class="col-sm-1 col-md-1 text-right" th:text="${linea.precio}"><strong>$<span th:text="${linea.precio}" /></strong></td>
+		                        <td class="col-sm-1 col-md-1 text-right" th:text="${linea.subtotal}"><strong>$<span th:text="${linea.subtotal}" /></strong></td>
+		                        <td class="col-sm-1 col-md-1">
+		                        <button type="submit" class="btn btn-danger" th:value="${lineaStat.index}">
+		                            <span class="glyphicon glyphicon-remove"></span> Remover
+		                        </button></td>
+		                    </tr>                    
+		                </tbody>
+		                
 		                <tfoot>
 		                    <tr>
 		                        <td>
-			                        <button type="button" class="btn btn-default"  >
+			                        <button type="button" class="btn btn-default"  onclick="form.agregarLinea.click()">
+			                        	<input type="submit" name="agregarLinea" class="hidden"/>
 			                            <span class="glyphicon glyphicon-shopping-cart"></span> Agregar Item
 			                        </button>
 		                        </td>
 		                        <td></td>
 		                        <td></td>
 		                        <td><h5>Envío</h5><h3>Total</h3></td>
-		                        <td class="text-right"><h5><strong>$0.00</strong></h5><h3><span th:text="*{total}" /></h3></td>
+		                        <td class="text-right"><h5><strong>$0.00</strong></h5><h3>$<span th:text="*{total}" /></h3></td>
 		                        <td></td>
 		                    </tr>		                    
 		                    <tr>
