--- a/src/main/resources/templates/venta.html
+++ b/src/main/resources/templates/venta.html
@@ -14,9 +14,11 @@
 		        <div class="col-sm-12 col-md-10 col-md-offset-1">
 					<h2>Shopping Cart</h2>
 					<form action="#" th:action="@{/}" th:object="${venta}" method="post" id="form" class="form-inline" >
-						<ul th:if="${#fields.hasErrors('*')}" class="errorlist">
-							<li th:each="err : ${#fields.errors('*')}" th:text="${err}">Input is incorrect</li>
+						<div th:if="${error }" class="alert alert-warning">
+			          	<ul>
+							<li th:text="${error}"></li>
 			          	</ul>
+			          	</div>
 			        <div class="form-group" th:if="${venta.cliente==null}">
 					    <label class="sr-only" for="cliente.id">Cliente ID</label>
 					    <input type="number" name="cliente.id" id="cliente.id" onchange="form.identificarCliente.click()" required="true" class="form-control input-sm" placeholder="Id Cliente"/>
@@ -60,7 +62,7 @@
 		                        <td class="col-sm-8 col-md-6">
 			                        <div class="media">
 			                            <a class="thumbnail pull-left" href="#"> <img class="img-rounded" th:src="${linea.producto.urlImagen != null ? linea.producto.urlImagen : 'http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png'}" style="width: 45px; height:45px;" /> </a>
-			                            <div class="media-body ">
+			                            <div >
 			                                <h4 class="media-heading"><a href="#">
 			                                <span th:text="${linea.descripcion}" />
 			                                </a></h4>
@@ -69,11 +71,11 @@
 			                            </div>
 			                        </div>
 		                        </td>
-		                        <td class="col-sm-1 col-md-1" style="text-align: center" th:text="${linea.cantidad}"></td>		                        
-		                        <td class="col-sm-1 col-md-1 text-right"><strong>
+		                        <td class="text-center" th:text="${linea.cantidad}"></td>		                        
+		                        <td class="text-right"><strong>
 		                        $ <span th:text="${#numbers.formatDecimal(linea.precio, 0, 'COMMA', 2, 'POINT')}"/></strong></td>
-		                        <td class="col-sm-1 col-md-1 text-right"><strong>$<span th:text="${#numbers.formatDecimal(linea.subtotal, 0, 'COMMA', 2, 'POINT')}" /></strong></td>
-		                        <td class="col-sm-1 col-md-1">
+		                        <td class="text-right"><strong>$<span th:text="${#numbers.formatDecimal(linea.subtotal, 0, 'COMMA', 2, 'POINT')}" /></strong></td>
+		                        <td class="text-center">
 		                        <button type="submit" class="btn btn-danger btn-sm" name="removerLinea" th:value="${lineaStat.index}" th:if="${!venta.terminada}">
 		                            <span class="glyphicon glyphicon-remove"></span> Remover
 		                        </button>
